# jwbind

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  jwbind
cpp/: CMakeLists.txt
cpp/benchmark/: CMakeLists.txt  README.md
cpp/benchmark/src/: HelloRef.cpp  HelloRef.h  jbenchmark.cpp
cpp/wparser/: CMakeLists.txt
cpp/wparser/src/: wparser.cpp
cpp/wrapper/: CMakeLists.txt  main.cpp  simple.cpp  simple.h
java/template/: Makefile  build.gradle
pytool/: .gitignore  codegen.py  jparser.py  jwbind.py  parser.py  wparser.py
sample/: HelloWorld.java  Makefile  test.cpp
sana/: .gitignore  Makefile  README.md  jwasmtest.wasm  jwbind
sana/cpp/: BasicTest
sana/cpp/src/: BasicTest.cpp  DescParser.cpp  DescParser.h  DescWriter.cpp  common.h
sana/cpp/wrapper/: CMakeLists.txt  main.cpp  simple.cpp
sana/java/src/jwbind/desc/: ClassDesc.java
sana/java/template/: Makefile  build.gradle
sana/java/template/src/: HelloWorld.java
sana/playground/: build.gradle  jwasmtest.wat  settings.gradle
sana/pytool/: codegen.py  jwbind  jwbind.py  parser.py  test.desc
sana/src/: DescParser.cpp  DescWriter.cpp  DescWriter.h  common.h
sana/wrapper/: CMakeLists.txt  test.cpp  test.h  test.wasm
